Correct z-index postition

--- a/src/_variables.sass
+++ b/src/_variables.sass
@@ -64,7 +64,7 @@ $breakpoints: join($br-b, $br-a, comma)
     @warn 'There is no item "#{$name}", choose one of: #{$z-indexes}'
     @return null
 
-$z-a: (menu, h2, map, about, background, pattern, img, bg-image, gradient, mask)
+$z-a: (menu, h2, map, about, background, pattern, img, gradient, bg-image, mask)
 $z-b: (article, gallery, main, breadcrumbs, footer-wrapper, header, intro, title)
 $z-c: (bg, bg-shadow, sidebar, img-show, scroll-to-top, down-c, down-b, down-a)
 $z-d: join($z-b, $z-a, comma)
